# test_project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
data/simulated/: telemetry.csv
docs/: architecture.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts.timestamp-1773585430582-f7da99723fe73.mjs
frontend/src/: App.css  App.tsx  api.ts  types.ts
ntl_engine/api/: __init__.py  app.py
ntl_engine/config/: settings.py
ntl_engine/domain/: __init__.py
ntl_engine/graph/: __init__.py
ntl_engine/ingestion/: __init__.py  consumer.py  consumer_run.py
ntl_engine/models/: __init__.py
ntl_engine/physics/: loss.py
ntl_engine/simulator/: grid.py
ntl_engine/workers/: __init__.py
ntl_engine/xai/: __init__.py
scripts/: simulate_grid_data.py
src/: __init__.py
src/ntl_engine/api/: app.py
src/ntl_engine/config/: __init__.py  constants.py
src/ntl_engine/domain/: types.py
src/ntl_engine/graph/: build.py  topology.py
src/ntl_engine/ingestion/: validator.py  window.py
src/ntl_engine/models/: gnn.py
src/ntl_engine/physics/: __init__.py
src/ntl_engine/simulator/: __init__.py  grid.py
src/ntl_engine/workers/: tasks.py
src/ntl_engine/xai/: attribution.py
tests/: __init__.py  conftest.py  test_api.py  test_graph.py  test_physics.py  test_simulator.py  test_validator.py
